Convert wizard into an wasm app.

--- a/site-src/wizard/controller-wizard.html
+++ b/site-src/wizard/controller-wizard.html
@@ -37,28 +37,7 @@
     <p>Extended features from the <a id="link-httproute"
         href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#httproute" target="_blank" rel="noopener">HTTPRoute
         conformance table</a>. Core is implied (controllers must pass Core to appear).</p>
-    <h4>Gateway features</h4>
-    <table class="features" id="http-gateway-features">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Requirement</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <h4>HTTPRoute features</h4>
     <table class="features" id="http-route-features">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Requirement</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <h4>Backend TLS features</h4>
-    <table class="features" id="http-backend-tls-features">
       <thead>
         <tr>
           <th>Feature</th>
@@ -98,7 +77,7 @@
   </section>
 
   <p id="wizard-data-status" class="data-status"></p>
-  <button type="button" class="recommend-btn" id="recommend-btn" disabled>Recommend controllers</button>
+  <button type="button" class="recommend-btn" id="recommend-btn" disabled>Recommend</button>
   <button type="button" class="reset-btn" id="reset-btn">Reset</button>
 
   <section class="card" id="results">
@@ -107,64 +86,14 @@
   </section>
 
   <script>
-    // Feature definitions: loaded from data.featureDefinitions (matches conformance tables per version)
-    // Fallback used when data has no featureDefinitions (e.g. legacy array format)
-    const DEFAULT_FEATURE_DEFINITIONS = {
-      httpGateway: [
-        { id: 'GatewayPort8080', label: 'Gateway Port 8080' },
-        { id: 'GatewayAddressEmpty', label: 'Gateway Address Empty' },
-        { id: 'GatewayHTTPListenerIsolation', label: 'Gateway HTTP Listener Isolation' },
-        { id: 'GatewayInfrastructurePropagation', label: 'Gateway Infrastructure Propagation' },
-        { id: 'GatewayStaticAddresses', label: 'Gateway Static Addresses' },
-      ],
-      httpRoute: [
-        { id: 'HTTPRouteHostRewrite', label: 'HTTPRoute Host Rewrite' },
-        { id: 'HTTPRoutePathRedirect', label: 'HTTPRoute Path Redirect' },
-        { id: 'HTTPRouteRequestMirror', label: 'HTTPRoute Request Mirror' },
-        { id: 'HTTPRouteRequestPercentageMirror', label: 'HTTPRoute Request Percentage Mirror' },
-        { id: 'HTTPRouteResponseHeaderModification', label: 'HTTPRoute Response Header Modification' },
-        { id: 'HTTPRouteSchemeRedirect', label: 'HTTPRoute Scheme Redirect' },
-        { id: 'HTTPRouteBackendProtocolH2C', label: 'HTTPRoute Backend Protocol H2C' },
-        { id: 'HTTPRouteBackendProtocolWebSocket', label: 'HTTPRoute Backend Protocol Web Socket' },
-        { id: 'HTTPRouteBackendRequestHeaderModification', label: 'HTTPRoute Backend Request Header Modification' },
-        { id: 'HTTPRouteBackendTimeout', label: 'HTTPRoute Backend Timeout' },
-        { id: 'HTTPRouteCORS', label: 'HTTPRoute CORS' },
-        { id: 'HTTPRouteDestinationPortMatching', label: 'HTTPRoute Destination Port Matching' },
-        { id: 'HTTPRouteMethodMatching', label: 'HTTPRoute Method Matching' },
-        { id: 'HTTPRouteNamedRouteRule', label: 'HTTPRoute Named Route Rule' },
-        { id: 'HTTPRouteParentRefPort', label: 'HTTPRoute Parent Ref Port' },
-        { id: 'HTTPRoutePathRewrite', label: 'HTTPRoute Path Rewrite' },
-        { id: 'HTTPRoutePortRedirect', label: 'HTTPRoute Port Redirect' },
-        { id: 'HTTPRouteQueryParamMatching', label: 'HTTPRoute Query Param Matching' },
-        { id: 'HTTPRouteRequestMultipleMirrors', label: 'HTTPRoute Request Multiple Mirrors' },
-        { id: 'HTTPRouteRequestTimeout', label: 'HTTPRoute Request Timeout' },
-      ],
-      httpBackendTls: [
-        { id: 'BackendTLSPolicy', label: 'Backend TLS Policy' },
-        { id: 'BackendTLSPolicySANValidation', label: 'Backend TLS Policy SAN Validation' },
-      ],
-      grpc: [
-        { id: 'GatewayAddressEmpty', label: 'Gateway Address Empty' },
-        { id: 'GatewayHTTPListenerIsolation', label: 'Gateway HTTP Listener Isolation' },
-        { id: 'GatewayInfrastructurePropagation', label: 'Gateway Infrastructure Propagation' },
-        { id: 'GatewayPort8080', label: 'Gateway Port 8080' },
-        { id: 'GatewayStaticAddresses', label: 'Gateway Static Addresses' },
-      ],
-      tls: [
-        { id: 'GatewayAddressEmpty', label: 'Gateway Address Empty' },
-        { id: 'GatewayHTTPListenerIsolation', label: 'Gateway HTTP Listener Isolation' },
-        { id: 'GatewayInfrastructurePropagation', label: 'Gateway Infrastructure Propagation' },
-        { id: 'GatewayPort8080', label: 'Gateway Port 8080' },
-        { id: 'GatewayStaticAddresses', label: 'Gateway Static Addresses' },
-      ],
-    };
-
-    let GATEWAY_HTTP_FEATURES = DEFAULT_FEATURE_DEFINITIONS.httpGateway;
-    let HTTPROUTE_FEATURES = DEFAULT_FEATURE_DEFINITIONS.httpRoute;
-    let HTTP_BACKEND_TLS_FEATURES = DEFAULT_FEATURE_DEFINITIONS.httpBackendTls || [];
-    let GRPC_FEATURES = DEFAULT_FEATURE_DEFINITIONS.grpc;
-    let TLS_FEATURES = DEFAULT_FEATURE_DEFINITIONS.tls;
-    let HTTP_FEATURES = [...GATEWAY_HTTP_FEATURES, ...HTTPROUTE_FEATURES, ...HTTP_BACKEND_TLS_FEATURES];
+    // Feature definitions: only from data.featureDefinitions (controller-wizard-data.json from generate-controller-wizard-data.py).
+    // No hardcoded defaults; single source of truth is the JSON.
+    let GATEWAY_HTTP_FEATURES = [];
+    let HTTPROUTE_FEATURES = [];
+    let HTTP_BACKEND_TLS_FEATURES = [];
+    let GRPC_FEATURES = [];
+    let TLS_FEATURES = [];
+    let HTTP_FEATURES = [];
 
     function applyFeatureDefinitions(def) {
       if (!def || !def.httpGateway) return;
@@ -220,14 +149,21 @@
     function updateFeaturesForVersion() {
       const available = IMPLEMENTATIONS.length > 0 ? getAvailableFeatureIds() : null;
       const filter = (list) => available ? list.filter(f => available.has(f.id)) : list;
-      const gatewayHttp = filter(GATEWAY_HTTP_FEATURES);
-      const httpRoute = filter(HTTPROUTE_FEATURES);
+      const gatewayHttp = filter(GATEWAY_HTTP_FEATURES).map(f => ({ id: f.id, label: f.label }));
+      const httpRoute = filter(HTTPROUTE_FEATURES).map(f => ({ id: f.id, label: f.label }));
       const httpBackendTls = filter(HTTP_BACKEND_TLS_FEATURES);
       const grpc = filter(GRPC_FEATURES);
       const tls = filter(TLS_FEATURES);
-      renderTable('http-gateway-features', gatewayHttp.map(f => ({ id: f.id, label: f.label })), 'http');
-      renderTable('http-route-features', httpRoute.map(f => ({ id: f.id, label: f.label })), 'http');
-      renderTable('http-backend-tls-features', httpBackendTls.map(f => ({ id: f.id, label: f.label })), 'http');
+      const gatewayFirst = [...gatewayHttp, ...httpRoute].filter(r => r.label.startsWith('Gateway'));
+      const rest = [...gatewayHttp, ...httpRoute].filter(r => !r.label.startsWith('Gateway'));
+      const backendTlsRows = httpBackendTls.map(f => ({ id: f.id, label: f.label }));
+      let httpRouteRows = rest.length > 0 && gatewayFirst.length > 0
+        ? [...gatewayFirst, { spacer: true }, ...rest]
+        : [...gatewayFirst, ...rest];
+      if (backendTlsRows.length > 0) {
+        httpRouteRows = [...httpRouteRows, { spacer: true }, ...backendTlsRows];
+      }
+      renderTable('http-route-features', httpRouteRows, 'http');
       renderTable('grpc-features', grpc.map(f => ({ id: f.id, label: f.label })), 'grpc');
       renderTable('tls-features', tls.map(f => ({ id: f.id, label: f.label })), 'tls');
     }
@@ -235,7 +171,10 @@
     function renderTable(tableId, rows, section) {
       const tbody = document.querySelector(`#${tableId} tbody`);
       const prefix = RADIO_PREFIX[section];
-      tbody.innerHTML = rows.map(({ id, label }) => `
+      tbody.innerHTML = rows.map((row) => {
+        if (row.spacer) return '<tr class="feature-spacer"><td colspan="2"></td></tr>';
+        const { id, label } = row;
+        return `
         <tr>
           <td>${label}</td>
           <td>
@@ -244,7 +183,8 @@
             <label><input type="radio" name="${prefix}${id}" value="na" checked /> N/A</label>
           </td>
         </tr>
-      `).join('');
+      `;
+      }).join('');
     }
 
     function resetAll() {
@@ -267,35 +207,44 @@
     }
 
     function getSelections() {
-      const allIds = [...new Set([...HTTP_FEATURES.map(f => f.id), ...GRPC_FEATURES.map(f => f.id), ...TLS_FEATURES.map(f => f.id)])];
+      const sections = [
+        { name: 'http', features: [...GATEWAY_HTTP_FEATURES, ...HTTPROUTE_FEATURES, ...HTTP_BACKEND_TLS_FEATURES] },
+        { name: 'grpc', features: GRPC_FEATURES },
+        { name: 'tls', features: TLS_FEATURES },
+      ];
       const must = [];
       const good = [];
-      allIds.forEach(id => {
-        let anyMust = false;
-        let anyGood = false;
-        ['http', 'grpc', 'tls'].forEach(section => {
+      sections.forEach(({ name: section, features }) => {
+        features.forEach(({ id }) => {
           const r = document.querySelector(`input[name="${RADIO_PREFIX[section]}${id}"]:checked`);
           if (!r) return;
-          if (r.value === 'must') anyMust = true;
-          else if (r.value === 'good') anyGood = true;
+          if (r.value === 'must') {
+            must.push({ section, id });
+          } else if (r.value === 'good') {
+            good.push({ section, id });
+          }
         });
-        if (anyMust) must.push(id);
-        else if (anyGood) good.push(id);
       });
-      const mustDedup = [...new Set(must)];
-      const goodDedup = good.filter(id => !mustDedup.includes(id));
-      return { must: mustDedup, good: [...new Set(goodDedup)] };
+      const mustSet = new Set(must.map(m => m.section + '\0' + m.id));
+      const goodFiltered = good.filter(sel => !mustSet.has(sel.section + '\0' + sel.id));
+      return { must, good: goodFiltered };
     }
 
     function recommend() {
+      const resultsContent = document.getElementById('results-content');
+      const resultsDiv = document.getElementById('results');
+      const statusEl = document.getElementById('wizard-data-status');
+      resultsContent.innerHTML = '';
+      resultsDiv.classList.remove('visible');
+      if (statusEl) statusEl.textContent = '';
+
       if (IMPLEMENTATIONS.length === 0) {
-        document.getElementById('results-content').innerHTML = '<p class="no-results">No implementation data loaded. Run <code>python hack/generate-controller-wizard-data.py --all</code> to generate <code>site-src/wizard/data/controller-wizard-data.json</code>, then serve from <code>site-src/</code> (e.g. <code>python -m http.server 8000</code>), or open the wizard from the built site.</p>';
-        document.getElementById('results').classList.add('visible');
-        document.getElementById('results').scrollIntoView({ behavior: 'smooth', block: 'start' });
+        resultsContent.innerHTML = '<p class="no-results">No implementation data loaded. Run <code>python hack/generate-controller-wizard-data.py --all</code> to generate <code>site-src/wizard/data/controller-wizard-data.json</code>, then serve from <code>site-src/</code> (e.g. <code>python -m http.server 8000</code>), or open the wizard from the built site.</p>';
+        resultsDiv.classList.add('visible');
+        resultsDiv.scrollIntoView({ behavior: 'smooth', block: 'start' });
         return;
       }
       const { must, good } = getSelections();
-      const statusEl = document.getElementById('wizard-data-status');
       const setStatusAfterRecommend = (recommendedCount) => {
         if (statusEl) {
           statusEl.textContent = recommendedCount === 1
@@ -304,9 +253,9 @@
         }
       };
       if (must.length === 0 && good.length === 0) {
-        document.getElementById('results-content').innerHTML = '<p class="no-results">Select at least one requirement as Want to have or Good to have, then click Recommend.</p>';
-        document.getElementById('results').classList.add('visible');
-        document.getElementById('results').scrollIntoView({ behavior: 'smooth', block: 'start' });
+        resultsContent.innerHTML = '<p class="no-results">Select at least one requirement as Want to have or Good to have, then click Recommend.</p>';
+        resultsDiv.classList.add('visible');
+        resultsDiv.scrollIntoView({ behavior: 'smooth', block: 'start' });
         setStatusAfterRecommend(0);
         return;
       }
@@ -317,13 +266,13 @@
         let mustCount = 0;
         let goodCount = 0;
         const missing = [];
-        must.forEach(id => {
+        must.forEach(({ section, id }) => {
           const ok = hasFeature(id);
-          if (ok) mustCount++; else missing.push(id);
+          if (ok) mustCount++; else missing.push({ section, id });
         });
-        good.forEach(id => {
+        good.forEach(({ section, id }) => {
           const ok = hasFeature(id);
-          if (ok) goodCount++; else if (!must.includes(id)) missing.push(id);
+          if (ok) goodCount++; else missing.push({ section, id });
         });
         return {
           ...impl,
@@ -336,9 +285,9 @@
       }).filter(c => c.mustCount >= 1 || (must.length === 0 && c.goodCount >= 1));
 
       if (scored.length === 0) {
-        document.getElementById('results-content').innerHTML = '<p class="no-results">No controller supports any of your Want to have requirements. Try relaxing to Good to have or fewer requirements.</p>';
-        document.getElementById('results').classList.add('visible');
-        document.getElementById('results').scrollIntoView({ behavior: 'smooth', block: 'start' });
+        resultsContent.innerHTML = '<p class="no-results">No controller supports any of your Want to have requirements. Try relaxing to Good to have or fewer requirements.</p>';
+        resultsDiv.classList.add('visible');
+        resultsDiv.scrollIntoView({ behavior: 'smooth', block: 'start' });
         setStatusAfterRecommend(0);
         return;
       }
@@ -349,9 +298,12 @@
         return new Date(b.reportDate) - new Date(a.reportDate);
       });
 
-      const featureLabel = (id) => {
+      const featureLabel = (section, id) => {
         const f = HTTP_FEATURES.find(x => x.id === id) || GRPC_FEATURES.find(x => x.id === id) || TLS_FEATURES.find(x => x.id === id);
-        return f ? f.label : id;
+        const label = f ? f.label : id;
+        if (section === 'grpc') return '(GRPC) ' + label;
+        if (section === 'tls') return '(TLS) ' + label;
+        return label;
       };
 
       const html = `
@@ -374,15 +326,15 @@
                 <td>${c.conformance.join(', ')}</td>
                 <td>${c.mustCount}/${c.mustTotal}</td>
                 <td>${c.goodCount}/${c.goodTotal}</td>
-                <td class="missing">${c.missing.length ? c.missing.map(featureLabel).join(', ') : '—'}</td>
+                <td class="missing">${c.missing.length ? c.missing.map(({ section, id }) => featureLabel(section, id)).join(', ') : '—'}</td>
               </tr>
             `).join('')}
           </tbody>
         </table>
       `;
-      document.getElementById('results-content').innerHTML = html;
-      document.getElementById('results').classList.add('visible');
-      document.getElementById('results').scrollIntoView({ behavior: 'smooth', block: 'start' });
+      resultsContent.innerHTML = html;
+      resultsDiv.classList.add('visible');
+      resultsDiv.scrollIntoView({ behavior: 'smooth', block: 'start' });
       setStatusAfterRecommend(scored.length);
     }
 
@@ -460,12 +412,6 @@
           btn.disabled = false;
         });
     }
-
-    renderTable('http-gateway-features', GATEWAY_HTTP_FEATURES.map(f => ({ id: f.id, label: f.label })), 'http');
-    renderTable('http-route-features', HTTPROUTE_FEATURES.map(f => ({ id: f.id, label: f.label })), 'http');
-    renderTable('http-backend-tls-features', HTTP_BACKEND_TLS_FEATURES.map(f => ({ id: f.id, label: f.label })), 'http');
-    renderTable('grpc-features', GRPC_FEATURES.map(f => ({ id: f.id, label: f.label })), 'grpc');
-    renderTable('tls-features', TLS_FEATURES.map(f => ({ id: f.id, label: f.label })), 'tls');
 
     loadImplementations();
     document.getElementById('recommend-btn').addEventListener('click', recommend);
