--- a/site-src/wizard/index.html
+++ b/site-src/wizard/index.html
@@ -15,9 +15,8 @@
       <label for="version-select"><strong>Gateway API version:</strong></label>
       <select id="version-select"></select>
     </p>
-    <p>For each feature, select <strong>Want to have</strong> (required), <strong>Good to have</strong> (optional), or
-      <strong>N/A</strong>. Feature names match the
-      <a id="link-intro-conformance" href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#httproute" target="_blank" rel="noopener">v1.4
+    <p>For each feature, select <strong>Must have</strong>, <strong>Good to have</strong>, or <strong>N/A</strong>. Feature names match the
+      <a id="link-intro-conformance" href="https://gateway-api.sigs.k8s.io/implementations/v1.4/" target="_blank" rel="noopener">v1.4
         conformance tables</a>.</p>
     <p class="intro-source">Recommendations are generated from the
       <a href="https://github.com/kubernetes-sigs/gateway-api/tree/main/conformance/reports" target="_blank" rel="noopener">conformance reports uploaded by project implementations</a>.
