host wizard on k8s page.

--- a/site-src/wizard/index.html
+++ b/site-src/wizard/index.html
@@ -15,7 +15,7 @@
       <label for="version-select"><strong>Gateway API version:</strong></label>
       <select id="version-select"></select>
     </p>
-    <p>For each feature, select <strong>Must have</strong>, <strong>Good to have</strong>, or <strong>N/A</strong>. Feature names match the
+    <p>For each feature, select <strong>Must have</strong>, <strong>Nice to have</strong>, or <strong>N/A</strong>. Feature names match the
       <a id="link-intro-conformance" href="https://gateway-api.sigs.k8s.io/implementations/v1.4/" target="_blank" rel="noopener">v1.4
         conformance tables</a>.</p>
     <p class="intro-source">Recommendations are generated from the
