Changed header and wording and update linter run to exclude wasm folder.

--- a/site-src/wizard/controller-wizard.html
+++ b/site-src/wizard/controller-wizard.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gateway API Controller Recommendation Wizard</title>
   <link rel="stylesheet" href="controller-wizard.css">
 </head>
 
@@ -25,7 +24,7 @@
       Implementations that submit conformance reports with skipped tests won't appear.</p>
     <details class="warning-note" open>
       <summary>Note</summary>
-      <p>This page is under active development and is not in its final form, especially for the project name and the names of the features. However, as it is based on submitted conformance reports, the information is correct.</p>
+      <p>This page is under active development. But recommendations are based on submitted conformance reports, so the information is correct.</p>
     </details>
   </div>
 
