--- a/site-src/wizard/index.html
+++ b/site-src/wizard/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gateway API Controller Recommendation Wizard</title>
+  <title>Gateway API Controller Matching Wizard</title>
   <link rel="stylesheet" href="controller-wizard.css">
 </head>
 
@@ -17,7 +17,7 @@
     <p>For each feature, select <strong>Must have</strong>, <strong>Nice to have</strong>, or <strong>N/A</strong>. Feature names match the
       <a id="link-intro-conformance" href="https://gateway-api.sigs.k8s.io/implementations/v1.4/" target="_blank" rel="noopener">v1.4
         conformance tables</a>.</p>
-    <p class="intro-source">Recommendations are generated from the
+    <p class="intro-source">Matches are generated from the
       <a href="https://github.com/kubernetes-sigs/gateway-api/tree/main/conformance/reports" target="_blank" rel="noopener">conformance reports uploaded by project implementations</a>.
       They are separated into the extended features that each project supports listed in their reports.
       Implementations only appear in this page if they pass Core conformance for the resource type, and the features listed are Extended features.
@@ -32,54 +32,36 @@
     <h2>Gateway Profile</h2>
 
     <h3 id="httproute">HTTPRoute</h3>
-    <p>Extended features from the <a id="link-httproute"
+    <p class="conformance-intro">Extended features from the <a id="link-httproute"
         href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#httproute" target="_blank" rel="noopener">HTTPRoute
         conformance table</a>. Core is implied (controllers must pass Core to appear).</p>
     <table class="features" id="http-route-features">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Requirement</th>
-        </tr>
-      </thead>
       <tbody></tbody>
     </table>
 
     <h3 id="grpcroute">GRPCRoute</h3>
-    <p>Extended features from the <a id="link-grpcroute"
+    <p class="conformance-intro">Extended features from the <a id="link-grpcroute"
         href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#grpcroute" target="_blank" rel="noopener">GRPCRoute
         conformance table</a>.</p>
     <table class="features" id="grpc-features">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Requirement</th>
-        </tr>
-      </thead>
       <tbody></tbody>
     </table>
 
     <h3 id="tlsroute">TLSRoute</h3>
-    <p>Extended features from the <a id="link-tlsroute"
+    <p class="conformance-intro">Extended features from the <a id="link-tlsroute"
         href="https://gateway-api.sigs.k8s.io/implementations/v1.4/#tlsroute" target="_blank" rel="noopener">TLSRoute
         conformance table</a>.</p>
     <table class="features" id="tls-features">
-      <thead>
-        <tr>
-          <th>Feature</th>
-          <th>Requirement</th>
-        </tr>
-      </thead>
       <tbody></tbody>
     </table>
   </section>
 
   <p id="wizard-data-status" class="data-status"></p>
-  <button type="button" class="recommend-btn" id="recommend-btn" disabled>Recommend</button>
+  <button type="button" class="recommend-btn" id="recommend-btn" disabled>Match</button>
   <button type="button" class="reset-btn" id="reset-btn">Reset</button>
 
   <section class="card" id="results">
-    <h2>Recommended controllers</h2>
+    <h2>Matching controllers</h2>
     <div id="results-content"></div>
   </section>
 
